# zarr-jpeg

./: .gitignore  README.md  pyproject.toml
src/zarr_jpeg/: __init__.py  zarr_jpeg.py
test/: test_jpeg.py
